--- a/convious/docker-compose.dev.yaml
+++ b/convious/docker-compose.dev.yaml
@@ -5,7 +5,7 @@ services:
     env_file: .env
     environment:
       - DJANGO_DEBUG=1
-      - CELERY_BROKER_URL=amqp://rmquser:rmqpass@lunchvote-rabbitmq
+      - CELERY_BROKER_URL=redis://lunchvote-redis:6379/0
       - CELERY_RESULT_BACKEND=redis://lunchvote-redis:6379/0
       - REDIS_LOCATION=redis://lunchvote-redis:6379/0
     volumes:
@@ -31,7 +31,7 @@ services:
       - celery
     ports: []
     depends_on:
-      - lunchvote-rabbitmq
+      - lunchvote-redis
       - lunchvote-pg-db
     stdin_open: false
     tty: false
@@ -44,16 +44,7 @@ services:
       - celerybeat
     ports: []
     depends_on:
-      - lunchvote-rabbitmq
+      - lunchvote-redis
       - lunchvote-django
     stdin_open: false
     tty: false
-
-  lunchvote-rabbitmq:
-    image: rabbitmq:3.8.7-management
-    container_name: lunchvote-rabbitmq
-    environment:
-      - RABBITMQ_DEFAULT_USER=rmquser
-      - RABBITMQ_DEFAULT_PASS=rmqpass
-    ports:
-      - 15672:15672
