--- a/convious/backend/pyproject.toml
+++ b/convious/backend/pyproject.toml
@@ -19,6 +19,7 @@ django-reversion = "~5.0.0"
 gunicorn = "~20.1.0"
 psycopg2-binary = "~2.9.3"
 whitenoise = {extras = ["brotli"], version = "~6.1.0"}
+graphene-django = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 factory-boy = "^3.2.1"
