--- a/convious/backend/pyproject.toml
+++ b/convious/backend/pyproject.toml
@@ -20,6 +20,7 @@ gunicorn = "~20.1.0"
 psycopg2-binary = "~2.9.3"
 whitenoise = {extras = ["brotli"], version = "~6.1.0"}
 graphene-django = "^3.0.0"
+django-graphql-jwt = "^0.3.4"
 
 [tool.poetry.dev-dependencies]
 factory-boy = "^3.2.1"
