--- a/convious/.env.example
+++ b/convious/.env.example
@@ -9,3 +9,6 @@ DATABASE_HOST=lunchvote-pg-db
 DATABASE_USER=lunchvote_user
 DATABASE_PASSWORD=long_lunchvote_db_password
 DATABASE_PORT=5432
+
+# How many votes allowed per user per day
+LUNCHVOTE_VOTES_USER_VOTES_PER_DAY=5
